Fixes filter alignment + use bootstrap form for filters

--- a/app/assets/stylesheets/godmin/index.css.scss
+++ b/app/assets/stylesheets/godmin/index.css.scss
@@ -29,8 +29,14 @@ body {
 }
 
 #filters {
+  .filter .control-label {
+    display: block;
+  }
   .filter .form-control {
     min-width: 170px;
+  }
+  .filter .form-control.selectize-control {
+    height: 34px;
   }
 }
 
